Add mailing group support in preset

--- a/ang/mailingpresets/MailingpresetsSettingsCtrl.html
+++ b/ang/mailingpresets/MailingpresetsSettingsCtrl.html
@@ -37,7 +37,7 @@
             name="group_id"
             ng-model="preset.group_id">
             <option value=""></option>
-            <option ng-repeat="g in mailinggroups | orderBy:'title'" value="{{g.id}}">{{g.title}}</option>
+            <option ng-repeat="g in mailinggroups" value="{{g.id}}">{{g.title}}</option>
           </select>
         </div>
       </div>
